--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ certifi==2024.8.30
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
+dnspython==2.7.0
 exceptiongroup==1.2.2
 fastapi==0.115.0
 fastapi-cache2==0.2.2
@@ -13,7 +14,9 @@ idna==3.10
 pendulum==3.0.0
 pydantic==2.9.2
 pydantic_core==2.23.4
+pymongo==4.10.1
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 requests==2.32.3
 six==1.16.0
 sniffio==1.3.1
